docs: Update README as submission document and QUICK_START as technical guide - Transform README into professional PoE submission document and QUICK_START into comprehensive technical setup guide