@@ -1,196 +1,299 @@
-# QuickChat - Quick Start Guide
+# QuickChat Application - Quick Start Guide
 
-## 🚀 Get Started in 5 Minutes
+## 🚀 Prerequisites
 
-### Step 1: Prerequisites Check
-Make sure you have:
-- [ ] Java 11 or higher installed
-- [ ] Maven installed (or use your IDE's built-in Maven)
-- [ ] Git installed
-- [ ] GitHub account created
-- [ ] Applied for GitHub Student Developer Pack
+Before running the QuickChat application, ensure you have the following installed:
 
-### Step 2: Verify Your Setup
+### **Required Software**
+- **Java Development Kit (JDK) 11 or higher**
+  - Download from: https://adoptium.net/
+  - Verify installation: `java -version` and `javac -version`
+
+- **Apache Maven 3.6+**
+  - Download from: https://maven.apache.org/download.cgi
+  - Verify installation: `mvn -version`
+
+- **Git**
+  - Download from: https://git-scm.com/downloads
+  - Verify installation: `git --version`
+
+### **Optional but Recommended**
+- **IDE**: IntelliJ IDEA, Eclipse, or NetBeans
+- **GitHub Account**: For version control and CI/CD features
+
+## 📥 Installation
+
+### **1. Clone the Repository**
 ```bash
-# Check Java version
-java -version
+# Clone the project
+git clone <repository-url>
+cd QuickChat
 
-# Check Maven version
-mvn -version
-
-# Check Git version
-git --version
+# Or if you have the project locally
+cd path/to/QuickChat
 ```
 
-### Step 3: Initialize Git Repository
-```bash
-# Initialize git repository
-git init
-
-# Add all files
-git add .
-
-# Make initial commit
-git commit -m "Initial project setup with Maven structure and CI/CD"
-
-# Add your GitHub remote (replace with your repository URL)
-git remote add origin https://github.com/YOUR_USERNAME/quickchat-app.git
-
-# Push to GitHub
-git push -u origin main
+### **2. Verify Project Structure**
+```
+QuickChat/
+├── src/main/java/
+│   ├── Login.java
+│   ├── Message.java
+│   └── QuickChatApp.java
+├── src/test/java/
+│   ├── LoginTest.java
+│   ├── MessageTest.java
+│   └── MessagePhase3Test.java
+├── pom.xml
+└── data/
 ```
 
-### Step 4: Start Development
-
-#### Phase 1: Authentication System (Start Here!)
-1. **Create the Login class**:
-   ```bash
-   # Create the main Login class file
-   touch src/main/java/Login.java
-   ```
-
-2. **Create the test file**:
-   ```bash
-   # Create the test file
-   touch src/test/java/LoginTest.java
-   ```
-
-3. **Start with Test-Driven Development**:
-   - Write your tests first (see DEVELOPMENT_ROADMAP.md)
-   - Then implement the methods to make tests pass
-
-#### Your First Task: Username Validation
-Create a method that validates usernames with these rules:
-- Must contain an underscore (_)
-- Must be 5 characters or less
-- Return appropriate success/error messages
-
-### Step 5: Run Tests
+### **3. Install Dependencies**
 ```bash
-# Run all tests
+# Download and install all Maven dependencies
+mvn clean install
+```
+
+## ▶️ Running the Application
+
+### **Method 1: Using Maven (Recommended)**
+```bash
+# Compile and run the application
+mvn clean compile exec:java -Dexec.mainClass="QuickChatApp"
+```
+
+### **Method 2: Using Java directly**
+```bash
+# Compile the source code
+mvn clean compile
+
+# Run the main class
+java -cp target/classes QuickChatApp
+```
+
+### **Method 3: Using IDE**
+1. Open the project in your IDE
+2. Navigate to `src/main/java/QuickChatApp.java`
+3. Right-click and select "Run" or use the IDE's run button
+
+## 🧪 Running Tests
+
+### **Run All Tests**
+```bash
+# Execute all unit tests
 mvn test
+```
 
-# Run tests with coverage report
+### **Run Specific Test Classes**
+```bash
+# Run only Login tests
+mvn test -Dtest=LoginTest
+
+# Run only Message tests
+mvn test -Dtest=MessageTest
+
+# Run only Phase 3 tests
+mvn test -Dtest=MessagePhase3Test
+```
+
+### **Generate Test Reports**
+```bash
+# Generate detailed test reports
+mvn surefire-report:report
+
+# View reports at: target/site/surefire-report.html
+```
+
+### **Code Coverage Analysis**
+```bash
+# Generate code coverage report
 mvn clean test jacoco:report
 
-# View coverage report
-# Open target/site/jacoco/index.html in your browser
+# View coverage at: target/site/jacoco/index.html
 ```
 
-### Step 6: Create Feature Branches
+## 🎮 Using the Application
+
+### **1. Application Startup**
+When you run the application, you'll see:
+```
+Welcome to QuickChat
+
+Please choose an option:
+1) Send Messages
+2) Show recently sent messages
+3) Quit
+```
+
+### **2. User Registration & Login**
+Before sending messages, you'll need to:
+1. **Register** with valid credentials:
+   - Username: Must contain underscore (_) and be ≤5 characters
+   - Password: ≥8 characters, uppercase, number, special character
+   - Phone: South African format (+27xxxxxxxxx)
+
+2. **Login** with your registered credentials
+
+### **3. Sending Messages**
+1. Choose option 1 from the main menu
+2. Specify how many messages you want to send
+3. For each message:
+   - Enter recipient phone number (+27xxxxxxxxx format)
+   - Enter message text (≤250 characters)
+   - Choose action: Send, Store, or Disregard
+
+### **4. Message Management**
+- **View Messages**: See all sent messages with details
+- **Search**: Find messages by ID or recipient
+- **Reports**: Generate comprehensive message reports
+- **Delete**: Remove messages using message hash
+
+## 🔧 Configuration
+
+### **JSON Storage**
+- Stored messages are saved to: `data/stored_messages.json`
+- The data directory is created automatically
+- JSON files are human-readable and can be inspected
+
+### **Test Data**
+The application includes predefined test data for validation:
+- **Valid Username**: "kyl_1"
+- **Valid Password**: "Ch&&sec@ke99!"
+- **Valid Phone**: "+27838968976"
+
+## 🐛 Troubleshooting
+
+### **Common Issues**
+
+#### **"Command not found" errors**
 ```bash
-# Create a feature branch for authentication
-git checkout -b feature-authentication
+# Check if Java is installed
+java -version
 
-# Work on your code...
-# Commit changes
-git add .
-git commit -m "Add username validation method"
+# Check if Maven is installed
+mvn -version
 
-# Push feature branch
-git push origin feature-authentication
+# Add to PATH if necessary (Windows)
+set PATH=%PATH%;C:\path\to\java\bin;C:\path\to\maven\bin
 
-# Create pull request on GitHub
+# Add to PATH if necessary (Mac/Linux)
+export PATH=$PATH:/path/to/java/bin:/path/to/maven/bin
 ```
 
-## 📋 Development Checklist
+#### **Compilation Errors**
+```bash
+# Clean and rebuild
+mvn clean compile
 
-### Part 1: Authentication (Week 1-2)
-- [ ] `checkUserName()` method
-- [ ] `checkPasswordComplexity()` method  
-- [ ] `checkCellPhoneNumber()` method (use AI for regex)
-- [ ] `registerUser()` method
-- [ ] `loginUser()` method
-- [ ] `returnLoginStatus()` method
-- [ ] All authentication unit tests
-- [ ] Tests passing in CI/CD
-
-### Part 2: Messaging (Week 3-4)
-- [ ] `Message` class structure
-- [ ] Menu system implementation
-- [ ] Message validation methods
-- [ ] Message hash generation
-- [ ] JSON storage (use AI assistance)
-- [ ] All messaging unit tests
-- [ ] Integration with authentication
-
-### Part 3: Data Management (Week 5-6)
-- [ ] Array-based storage
-- [ ] Search functionality
-- [ ] Report generation
-- [ ] Message deletion
-- [ ] JSON file reading
-- [ ] All data management tests
-
-## 🧪 Testing Strategy
-
-### Write Tests First!
-1. Look at the exact test data in the requirements
-2. Write the test method
-3. Run the test (it should fail)
-4. Implement the method to make it pass
-5. Refactor if needed
-
-### Example Test Structure:
-```java
-@Test
-public void testUsernameValidation() {
-    Login login = new Login();
-    
-    // Test valid username
-    assertTrue(login.checkUserName("kyl_1"));
-    
-    // Test invalid username
-    assertFalse(login.checkUserName("kyle!!!!!!!"));
-}
+# If dependencies are missing
+mvn dependency:resolve
 ```
 
-## 🚨 Important Reminders
+#### **Test Failures**
+```bash
+# Run tests with verbose output
+mvn test -X
 
-### AI Tool Usage
-- Use AI for regex patterns and JSON handling
-- **Always attribute AI-generated code**
-- Example attribution:
-  ```java
-  /*
-   * The following regular expression was generated using ChatGPT
-   * OpenAI. (2024). ChatGPT (Version 4) [Large language model].
-   * https://chat.openai.com/
-   * Prompt: "Create a regex for South African phone numbers..."
-   */
-  ```
+# Run specific failing test
+mvn test -Dtest=ClassName#methodName
+```
 
-### Quality Standards
-- ✅ All tests must pass before committing
-- ✅ Use exact test data from requirements
-- ✅ Follow Java naming conventions
-- ✅ Add proper error handling
-- ✅ Write clear, readable code
+#### **Port/Permission Issues**
+- Ensure no other applications are using required resources
+- Run with appropriate permissions
+- Check firewall settings if applicable
 
-### Git Workflow
-- ✅ Create feature branches for each part
-- ✅ Commit frequently with descriptive messages
-- ✅ Never push broken code to main
-- ✅ Use pull requests for code review
+### **Memory Issues**
+```bash
+# Increase Maven memory if needed
+export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m"
+```
 
-## 🆘 Need Help?
+## 📊 Performance Tips
 
-### Common Issues
-1. **Tests not running**: Check Maven setup and JUnit dependencies
-2. **CI/CD failing**: Ensure all tests pass locally first
-3. **Git issues**: Make sure you're on the correct branch
-4. **Build errors**: Check Java version compatibility
+### **Optimal Running Conditions**
+- **RAM**: Minimum 512MB available
+- **Java Heap**: Default settings are sufficient
+- **Disk Space**: ~50MB for dependencies and build artifacts
 
-### Resources
-- [Maven Getting Started](https://maven.apache.org/guides/getting-started/)
-- [JUnit 5 User Guide](https://junit.org/junit5/docs/current/user-guide/)
-- [Git Branching Tutorial](https://learngitbranching.js.org/)
+### **IDE Configuration**
+- **IntelliJ IDEA**: Import as Maven project
+- **Eclipse**: Use "Import Existing Maven Projects"
+- **NetBeans**: Open as Maven project
 
-### Next Steps
-1. Read through README.md for complete project overview
-2. Check DEVELOPMENT_ROADMAP.md for detailed task breakdown
-3. Start with Part 1: Authentication System
-4. Write tests first, then implement
-5. Commit and push regularly
+## 🔍 Verification
 
-**Good luck! Remember: Focus on quality over speed. It's better to have working, tested code than rushed, broken code.** 🎯 
+### **Verify Installation Success**
+```bash
+# 1. All tests should pass
+mvn test
+# Expected: Tests run: 57, Failures: 0, Errors: 0, Skipped: 0
+
+# 2. Application should compile without errors
+mvn clean compile
+# Expected: BUILD SUCCESS
+
+# 3. Application should run
+mvn exec:java -Dexec.mainClass="QuickChatApp"
+# Expected: Welcome to QuickChat menu appears
+```
+
+### **Health Check Commands**
+```bash
+# Check project structure
+ls -la src/main/java/
+ls -la src/test/java/
+
+# Verify dependencies
+mvn dependency:tree
+
+# Check for any issues
+mvn validate
+```
+
+## 📚 Additional Resources
+
+### **Documentation**
+- **JavaDoc**: Generate with `mvn javadoc:javadoc`
+- **Project Reports**: Generate with `mvn site`
+
+### **Development Tools**
+- **Maven Wrapper**: Use `./mvnw` instead of `mvn` for consistent versions
+- **IDE Plugins**: Install Maven and Git plugins for better integration
+
+### **Useful Maven Commands**
+```bash
+# Clean build artifacts
+mvn clean
+
+# Compile without running tests
+mvn compile -DskipTests
+
+# Package into JAR
+mvn package
+
+# Install to local repository
+mvn install
+
+# Run in debug mode
+mvn exec:java -Dexec.mainClass="QuickChatApp" -Dexec.args="-Xdebug"
+```
+
+## 🆘 Getting Help
+
+### **If You Encounter Issues**
+1. **Check Prerequisites**: Ensure all required software is installed
+2. **Verify Versions**: Use compatible Java and Maven versions
+3. **Clean Build**: Run `mvn clean install` to reset
+4. **Check Logs**: Look for error messages in console output
+5. **Test Environment**: Try running on a different machine/environment
+
+### **Support Resources**
+- **Maven Documentation**: https://maven.apache.org/guides/
+- **JUnit 5 Guide**: https://junit.org/junit5/docs/current/user-guide/
+- **Java Documentation**: https://docs.oracle.com/en/java/
+
+---
+
+**Quick Start Complete!** 🎉  
+Your QuickChat application should now be running successfully. 
